gateway-PoC/migration/i2gw/ingress/backend-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-tls
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  rules:
  - host: backend-tls.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
