gateway-PoC/migration/i2gw/ingress/basic-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-auth
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-secret
    nginx.ingress.kubernetes.io/auth-realm: Restricted
spec:
  ingressClassName: nginx
  rules:
  - host: basic-auth.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
