gateway-PoC/migration/i2gw/ingress/body-size.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: body-size
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
spec:
  ingressClassName: nginx
  rules:
  - host: body-size.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
