gateway-PoC/migration/i2gw/ingress/header-modifier.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: header-modifier
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/x-forwarded-prefix: /app
spec:
  ingressClassName: nginx
  rules:
  - host: header-modifier.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
