gateway-PoC/migration/i2gw/ingress/header-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: header-routing-base
  namespace: default
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
  - host: header-routing.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: header-routing
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/canary: 'true'
    nginx.ingress.kubernetes.io/canary-by-header: X-Canary
spec:
  ingressClassName: nginx
  rules:
  - host: header-routing.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-canary
            port:
              number: 80
