gateway-PoC/migration/i2gw/ingress/ip-allow-deny.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip-allow-deny
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,192.168.1.0/24
spec:
  ingressClassName: nginx
  rules:
  - host: ip-allow-deny.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
