gateway-PoC/migration/i2gw/ingress/path-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-redirect
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://new.example.com/
spec:
  ingressClassName: nginx
  rules:
  - host: path-redirect.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
