gateway-PoC/migration/i2gw/ingress/path-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-routing
  namespace: default
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
  - host: path-routing.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: echo2
            port:
              number: 80
