gateway-PoC/migration/i2gw/ingress/rate-limit.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rate-limit
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: '5'
spec:
  ingressClassName: nginx
  rules:
  - host: rate-limit.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
