gateway-PoC/migration/i2gw/ingress/regex.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: regex
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: regex.example.com
    http:
      paths:
      - path: /api/v[0-9]+
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 80
