gateway-PoC/migration/i2gw/ingress/request-mirror.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: request-mirror
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/mirror-target: http://mirror.example.com/
spec:
  ingressClassName: nginx
  rules:
  - host: request-mirror.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
