gateway-PoC/migration/i2gw/ingress/session-affinity.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: session-affinity
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/session-cookie-expires: '172800'
spec:
  ingressClassName: nginx
  rules:
  - host: session-affinity.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
