gateway-PoC/migration/i2gw/ingress/snippet.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snippet
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: 'more_set_headers "X-Foo: bar";'
spec:
  ingressClassName: nginx
  rules:
  - host: snippet.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
