gateway-PoC/migration/i2gw/ingress/timeout.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timeout
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '10'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '60'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '60'
spec:
  ingressClassName: nginx
  rules:
  - host: timeout.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
