gateway-PoC/migration/i2gw/ingress/url-rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-rewrite
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /new
spec:
  ingressClassName: nginx
  rules:
  - host: url-rewrite.example.com
    http:
      paths:
      - path: /old
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 80
