gateway-PoC/migration/i2gw/ingress/websocket.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket
  namespace: default
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
  - host: websocket.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
